--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "register-service-worker": "^1.6.2",
     "vue": "^2.6.11",
     "vue-datetime": "^1.0.0-beta.11",
+    "vue-made-with-love": "^0.1.4",
     "weekstart": "^1.0.1"
   },
   "devDependencies": {
